--- a/src/App.css
+++ b/src/App.css
@@ -55,13 +55,6 @@
   border-width: 1px 1px 0 1px;
 }
 
-/* Styles for wrapping the search box */
-
-.main {
-  width: 50%;
-  margin: 50px auto;
-}
-
 /* Bootstrap 4 text input with search icon */
 
 .has-search .form-control {
@@ -78,4 +71,21 @@
   text-align: center;
   pointer-events: none;
   color: #aaa;
+}
+
+.header {
+  padding: 50px;
+}
+
+.profile-picture {
+  width: 75px;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  background-color: #f5f5f5;
 }
